<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    
    <TextView android:id="@+id/edit_person_title"
              android:textSize="22sp"
              android:text="@string/edit_person"
              android:paddingTop="15dp"
              android:layout_centerHorizontal="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
    
    <View android:id="@+id/edit_person_divider"
          android:layout_below="@id/edit_person_title"
          android:layout_width="match_parent"
          android:layout_height="1dip"
          android:layout_margin="10dp"
          android:background="@color/divider" />
    
    <RelativeLayout android:id="@+id/edit_name_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/edit_person_divider"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/edit_name_label"
                  android:textSize="16sp"
                  android:text="@string/name"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <EditText android:id="@+id/edit_name_field"
                  android:textSize="16sp"
                  android:inputType="textCapWords"
                  android:imeOptions="actionNext"
                  android:layout_marginRight="5dp"
                  android:hint="@string/name_hint"
                  android:layout_centerVertical="true"
                  android:layout_toRightOf="@id/edit_name_label"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/edit_email_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/edit_name_layout"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/edit_email_label"
                  android:textSize="16sp"
                  android:text="@string/email"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <EditText android:id="@+id/edit_email_field"
                  android:textSize="16sp"
                  android:inputType="textEmailAddress"
                  android:imeOptions="actionDone"
                  android:layout_marginRight="5dp"
                  android:hint="@string/email_hint"
                  android:layout_centerVertical="true"
                  android:layout_toRightOf="@id/edit_email_label"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/edit_birth_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/edit_email_layout"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/edit_birth_label"
                  android:textSize="16sp"
                  android:text="@string/birth"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <Button android:id="@+id/edit_birth_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/edit_birth_label"
                android:textSize="16sp" />
    </RelativeLayout>
    
    <Button android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="16sp"
            android:text="@string/submit" />
</RelativeLayout>