<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
    
    <TextView android:id="@+id/add_event_title"
              android:textSize="22sp"
              android:text="@string/add_event"
              android:paddingTop="15dp"
              android:layout_centerHorizontal="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
    
    <View android:id="@+id/add_event_divider"
          android:layout_below="@id/add_event_title"
          android:layout_width="match_parent"
          android:layout_height="1dip"
          android:layout_margin="10dp"
          android:background="@color/divider" />
    
    <RelativeLayout android:id="@+id/add_title_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/add_event_divider"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/add_title_label"
                  android:textSize="16sp"
                  android:text="@string/title"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <EditText android:id="@+id/add_title_field"
                  android:textSize="16sp"
                  android:inputType="textCapWords"
                  android:imeOptions="actionNext"
                  android:layout_marginRight="5dp"
                  android:hint="@string/title_hint"
                  android:layout_centerVertical="true"
                  android:layout_toRightOf="@id/add_title_label"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/add_desc_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/add_title_layout"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/add_desc_label"
                  android:textSize="16sp"
                  android:text="@string/description"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <EditText android:id="@+id/add_desc_field"
                  android:textSize="16sp"
                  android:inputType="textCapSentences"
                  android:imeOptions="actionDone"
                  android:layout_marginRight="5dp"
                  android:hint="@string/desc_hint"
                  android:layout_centerVertical="true"
                  android:layout_toRightOf="@id/add_desc_label"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/add_start_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/add_desc_layout"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/add_start_label"
                  android:textSize="16sp"
                  android:text="@string/start"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <Button android:id="@+id/add_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/add_start_label"
                android:textSize="16sp" />
        
        <Button android:id="@+id/add_start_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/add_start_date"
                android:textSize="16sp" />
    </RelativeLayout>
    
    <RelativeLayout android:id="@+id/add_end_layout" 
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/add_start_layout"
                    android:paddingTop="10dp"
                    android:paddingLeft="10dp"
                    android:orientation="horizontal">
        
        <TextView android:id="@+id/add_end_label"
                  android:textSize="16sp"
                  android:text="@string/end"
                  android:layout_marginRight="5dp"
                  android:layout_centerVertical="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
        
        <Button android:id="@+id/add_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/add_end_label"
                android:textSize="16sp" />
        
        <Button android:id="@+id/add_end_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/add_end_date"
                android:textSize="16sp" />
    </RelativeLayout>
    
    <Button android:id="@+id/add_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textSize="16sp"
            android:text="@string/create_event" />
</RelativeLayout>