<?xml version="1.0" encoding="UTF-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
    
        <TextView android:id="@+id/devent_title"
                  android:textSize="28sp"
                  android:paddingTop="25dp"
                  android:gravity="center_horizontal"
                  android:layout_centerHorizontal="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
    
        <TextView android:id="@+id/devent_desc"
                  android:padding="5dp"
                  android:textSize="18sp"
                  android:gravity="center_horizontal"
                  android:layout_centerHorizontal="true"
                  android:textStyle="italic"
                  android:layout_below="@id/devent_title"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
    
        <TextView android:id="@+id/devent_details_label"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:paddingTop="20dp"
                  android:paddingRight="15dp"
                  android:layout_below="@id/devent_desc"
                  android:text="@string/details"
                  android:gravity="right"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />
    
        <View android:id="@+id/devent_details_divider"
              android:layout_below="@id/devent_details_label"
              android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="@color/divider" 
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp" />
    
        <TextView android:id="@+id/devent_start"
                  android:textSize="14sp"
                  android:paddingTop="10dp"
                  android:paddingLeft="10dp"
                  android:layout_below="@id/devent_details_divider"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
    
        <TextView android:id="@+id/devent_end"
                  android:textSize="14sp"
                  android:paddingTop="10dp"
                  android:paddingLeft="10dp"
                  android:layout_below="@id/devent_start"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content" />
    
        <TextView android:id="@+id/devent_people_label"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:paddingTop="20dp"
                  android:paddingRight="15dp"
                  android:layout_below="@id/devent_end"
                  android:text="@string/participants"
                  android:gravity="right"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />
    
        <View android:id="@+id/devent_people_divider"
              android:layout_below="@id/devent_people_label"
              android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="@color/divider" 
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp" />
        
        <Button android:id="@+id/add_participant"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/add_participant"
                android:layout_below="@id/devent_people_divider"
                android:textSize="14sp"
                android:background="@color/addbutton"
                android:textColor="@color/buttontext" />
    
        <TableLayout android:id="@+id/devent_people_table"
                     android:stretchColumns="0,1"
                     android:layout_below="@id/add_participant"
                     android:layout_height="wrap_content" 
                     android:layout_width="match_parent">
        </TableLayout>
        
        <TextView android:id="@+id/devent_comments_label"
                  android:textSize="18sp"
                  android:textStyle="bold"
                  android:paddingTop="20dp"
                  android:paddingRight="15dp"
                  android:layout_below="@id/devent_people_table"
                  android:text="@string/messages"
                  android:gravity="right"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content" />
    
        <View android:id="@+id/devent_comments_divider"
              android:layout_below="@id/devent_comments_label"
              android:layout_width="match_parent"
              android:layout_height="1dip"
              android:background="@color/divider" 
              android:layout_marginRight="10dp"
              android:layout_marginLeft="10dp" />
        
        <Button android:id="@+id/add_comment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/add_message"
                android:layout_below="@id/devent_comments_divider"
                android:textSize="14sp"
                android:background="@color/addbutton"
                android:textColor="@color/buttontext" />
        
        <TableLayout android:id="@+id/devent_comments_table"
                     android:stretchColumns="0,1"
                     android:layout_below="@id/add_comment"
                     android:layout_height="wrap_content" 
                     android:layout_width="match_parent">
        </TableLayout>
    </RelativeLayout>
</ScrollView>